--- a/CSS/1.css
+++ b/CSS/1.css
@@ -87,3 +87,8 @@ body {
     margin: 5px 0; /* Add a bit of space between paragraphs */
 }
 
+.winners a{
+    text-decoration: none;
+    color: black;
+
+}
