--- a/CSS/EmployeeNominationCSS.css
+++ b/CSS/EmployeeNominationCSS.css
@@ -83,6 +83,8 @@ h1, h2, h3, h4 {
 
 .info {
     margin-left: 15px; /* Adds space between the image and text */
+    width: 100px;
+    word-break: break-all;
 }
 
 .info h4, .info small {
