fixed all issues

--- a/frontend/src/CSS/EmployeeNominationCSS.css
+++ b/frontend/src/CSS/EmployeeNominationCSS.css
@@ -98,31 +98,32 @@ body {
     color: #666;
 }
 
-.container {
+.container3 {
     margin-top: 10px;
     display: flex;
     align-items: center;
     margin-bottom: 15px;
 }
 
-.container img.photo {
+.container3 .photo {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 15px;
 }
 
-.container .info {
+
+.container3 .info {
     display: flex;
     flex-direction: column;
 }
 
-.container .info h4 {
+.container3 .info h4 {
     margin: 0;
     font-size: 16px;
 }
 
-.container .info small {
+.container3 .info small {
     color: #999;
 }
 
@@ -268,16 +269,16 @@ body {
 }
 
 @media (max-width: 480px) {
-    .container img.photo {
+    .container3 img.photo {
         width: 40px;
         height: 40px;
     }
 
-    .container .info h4 {
+    .container3 .info h4 {
         font-size: 14px;
     }
 
-    .container .info small {
+    .container3 .info small {
         font-size: 12px;
     }
 
