--- a/frontend/src/CSS/EmployeeOfTheMonthCSS.css
+++ b/frontend/src/CSS/EmployeeOfTheMonthCSS.css
@@ -9,7 +9,7 @@
 small {
     color: gray;
 }
-.container {
+.container4 {
     margin-top: 15px;
     margin-bottom: 0;
     display: flex; /* Ensures content aligns horizontally */
