--- a/frontend/src/CSS/nominate.css
+++ b/frontend/src/CSS/nominate.css
@@ -13,7 +13,9 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 60px;
   margin-bottom: 50px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 header {
