--- a/frontend/src/CSS/Profile.css
+++ b/frontend/src/CSS/Profile.css
@@ -1,64 +1,41 @@
-.container6 {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
-  
-  .profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .profile-row {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .profile-col {
-    flex: 0 0 33.3333%;
-    max-width: 33.3333%;
-    padding: 15px;
-  }
-  
-  .info-card {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-  }
-  
-  .card-img-top {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-  }
-  
-  .text {
-    margin-left: 15px;
-  }
-  
-  .name {
-    font-size: 1.5em;
-    margin-bottom: 5px;
-  }
-  
-  .position,
-  .followers {
-    margin-bottom: 5px;
-  }
-  
-  .profile-text-container {
-    margin-top: 20px;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-    width: 100%;
-    max-width: 800px;
-  }
+main{
+  margin: 50px 200px;
+}
+.profilePage-container{
+  display: flex;
+  margin: 50px 200px;
+}
+.profile{
+  display: flex;
+  align-items: center;
+  margin-bottom: 100px;
+}
+.profile-info{
+  margin-left: 50px;
+  margin-top: 0;
+  padding: 0;
+}
+.profile-info .name{
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+.profile-info .role{
+  color: grey;
+  font-size: medium;
+}
+.card-img{
+  width:150px;
+  height:150px;
+  border-radius: 50%;
+}
+.details-container h3{
+  font-size: 25px;
+}
+.details-container p{
+  font-size: 20px;
+}
+.details-container ol{
+  font-size: 20px;
+  padding-left: 20px;
+}
