added the checking function when you try to add a nominee to make sure that he wasn't added before

--- a/frontend/src/CSS/EmployeeNominationCSS.css
+++ b/frontend/src/CSS/EmployeeNominationCSS.css
@@ -103,6 +103,7 @@ body {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
+    cursor: pointer;
 }
 
 .nominationContainer .photo {
